operator/upstream-kustomizations/build-service/core/build-service-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: build-service-controller-manager
spec:
  template:
    spec:
      containers:
        - name: manager
