operator/upstream-kustomizations/build-service/core/webhook-config-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: build-service-controller-manager
spec:
  template:
    spec:
      containers:
      - name: manager
        volumeMounts:
        - name: webhook-config
          mountPath: /mnt
          readOnly: true
      volumes:
      - name: webhook-config
        configMap:
          name: webhook-config
          optional: true
          items:
          - key: webhook-config.json
            path: webhook-config.json
