operator/upstream-kustomizations/build-service/core/remove-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: build-service-allow-metrics-traffic
$patch: delete
